unity/SyntactsDemo/Assets/Syntacts/Syntacts.cs


        [DllImport("syntacts_c")]
        public static extern Handle Sequence_create();
        [DllImport("syntacts_c")]
        public static extern double Sequence_getHead(Handle handle);
        [DllImport("syntacts_c")]
        public static extern void Sequence_setHead(Handle handle, double head);
        [DllImport("syntacts_c")]
        public static extern void Sequence_pushFlt(Handle handle, double t);
        [DllImport("syntacts_c")]
        public static extern void Sequence_pushSig(Handle handle, Handle signal);
        [DllImport("syntacts_c")]
        public static extern void Sequence_pushSeq(Handle handle, Handle sequence);
        [DllImport("syntacts_c")]
        public static extern void Sequence_insertSig(Handle handle, Handle signal, double t);
        [DllImport("syntacts_c")]
        public static extern void Sequence_insertSeq(Handle handle, Handle sequence, double t);
        [DllImport("syntacts_c")]
        public static extern void Sequence_clear(Handle handle);

        [DllImport("syntacts_c")]
        public static extern Handle Sequence_SigSig(Handle lhs, Handle rhs);
        [DllImport("syntacts_c")]
        public static extern Handle Sequence_SigFlt(Handle lhs, double rhs);
        [DllImport("syntacts_c")]
        public static extern Handle Sequence_FltSig(double lhs, Handle rhs);
        [DllImport("syntacts_c")]
        public static extern void Sequence_SeqFlt(Handle lhs, double rhs);
        [DllImport("syntacts_c")]
        public static extern void Sequence_SeqSig(Handle lhs, Handle rhs);
        [DllImport("syntacts_c")]
        public static extern void Sequence_SeqSeq(Handle lhs, Handle rhs);

        [DllImport("syntacts_c")]
        public static extern Handle Product_create(Handle lhs, Handle rhs);
        [DllImport("syntacts_c")]
        public static extern Handle Sum_create(Handle lhs, Handle rhs);

        [DllImport("syntacts_c")]
        public static extern Handle Time_create();
        [DllImport("syntacts_c")]
        public static extern Handle Scalar_create(double value);
        [DllImport("syntacts_c")]
        public static extern Handle Ramp_create1(double initial, double rate);
        [DllImport("syntacts_c")]
        public static extern Handle Ramp_create2(double initial, double final, double duration);
        [DllImport("syntacts_c")]
        public static extern Handle Noise_create();
        [DllImport("syntacts_c", CallingConvention = CallingConvention.Cdecl)]
        public static extern Handle Expression_create(string expr);
        [DllImport("syntacts_c")]
        public static extern Handle Samples_create(float[] samples, int nSamples, double sampleRate);

        [DllImport("syntacts_c")]
        public static extern Handle Repeater_create(Handle signal, int repetitions, double delay);
        [DllImport("syntacts_c")]
        public static extern Handle Stretcher_create(Handle signal, double factor);
        [DllImport("syntacts_c")]
        public static extern Handle Reverser_create(Handle signal);

        [DllImport("syntacts_c")]
        public static extern Handle Envelope_create(double duration, double amp);
        [DllImport("syntacts_c")]
        public static extern Handle ASR_create(double a, double s, double r, double amp);
        [DllImport("syntacts_c")]
        public static extern Handle ADSR_create(double a, double d, double s, double r, double amp1, double amp2);
        [DllImport("syntacts_c")]
        public static extern Handle ExponentialDecay_create(double amplitude, double decay);
        [DllImport("syntacts_c")]
        public static extern Handle SignalEnvelope_create(Handle signal, double duration, double amplitude);

        [DllImport("syntacts_c")]
        public static extern Handle Sine_create1(Handle x);
        [DllImport("syntacts_c")]
        public static extern Handle Sine_create2(double hertz);
        [DllImport("syntacts_c")]
        public static extern Handle Sine_create3(double initial, double rate);
        [DllImport("syntacts_c")]
        public static extern Handle Sine_create4(double hertz, Handle modulation, double index);

        [DllImport("syntacts_c")]
        public static extern Handle Square_create1(Handle x);
        [DllImport("syntacts_c")]
        public static extern Handle Square_create2(double hertz);
        [DllImport("syntacts_c")]
        public static extern Handle Square_create3(double initial, double rate);
        [DllImport("syntacts_c")]
        public static extern Handle Square_create4(double hertz, Handle modulation, double index);

        [DllImport("syntacts_c")]
        public static extern Handle Saw_create1(Handle x);
        [DllImport("syntacts_c")]
        public static extern Handle Saw_create2(double hertz);
        [DllImport("syntacts_c")]
        public static extern Handle Saw_create3(double initial, double rate);
        [DllImport("syntacts_c")]
        public static extern Handle Saw_create4(double hertz, Handle modulation, double index);

        [DllImport("syntacts_c")]
        public static extern Handle Triangle_create1(Handle x);
        [DllImport("syntacts_c")]
        public static extern Handle Triangle_create2(double hertz);
        [DllImport("syntacts_c")]
        public static extern Handle Triangle_create3(double initial, double rate);
        [DllImport("syntacts_c")]
        public static extern Handle Triangle_create4(double hertz, Handle modulation, double index);

        [DllImport("syntacts_c")]
        public static extern Handle Pwm_create(double frequency, double dutyCycle);

        [DllImport("syntacts_c", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool Library_saveSignal(Handle signal, string name);
        [DllImport("syntacts_c", CallingConvention = CallingConvention.Cdecl)]
        public static extern Handle Library_loadSignal(string name);

        [DllImport("syntacts_c", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool Library_deleteSignal(string name);
        [DllImport("syntacts_c", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool Library_exportSignal(Handle signal, string filePath, int format, int sampleRate, double maxLength);
        [DllImport("syntacts_c", CallingConvention = CallingConvention.Cdecl)]
        public static extern Handle Library_importSignal(string filePath, int format, int sampleRate);

        [DllImport("syntacts_c")]
        public static extern int Debug_sigMapSize();

    }
}

// RESOURCES (INTERNAL):

// https://docs.microsoft.com/en-us/dotnet/standard/garbage-collection/implementing-dispose
// https://michaelscodingspot.com/ways-to-cause-memory-leaks-in-dotnet/